--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tenek Dictionary</title>
-    <link rel="stylesheet" href="main.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Tenek Translate Service</title>
 </head>
 <body>
-    
-    <div class="container p-4">
-        <div class="row">
-            {{{body}}}
-        </div>
-    </div>
-    
+    {{{body}}}
 </body>
 </html>
