--- a/src/views/dictionary.hbs
+++ b/src/views/dictionary.hbs
@@ -1,25 +1,30 @@
-<div class="col-md-12">
-    <div class="card border-primary text-white mb-3">
-        <div class="card-header">
-            <h1>{{title}}</h1>
-        </div>
-        <div class="card-body">
-            <table class="table table-hover">
-                <thead class="table-dark">
-                    <th>Palabra Español</th>
-                    <th>Palabra Tenek</th>
-                    <th>Descripcion</th>
-                </thead>
-                <tbody>
-                    {{#each words}}
-                        <tr>
-                            <td><strong>{{pal_esp}}</strong></td>
-                            <td><strong>{{pal_tenek}}</strong></td>
-                            <td><p>{{significado}}</p></td>
-                        </tr>
-                    {{/each}}
-                </tbody>
-            </table>
+<link rel="stylesheet" href="main.css">
+<div class="container p-4">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card border-primary text-white mb-3">
+                <div class="card-header">
+                    <h1>{{title}}</h1>
+                </div>
+                <div class="card-body">
+                    <table class="table table-hover">
+                        <thead class="table-dark">
+                            <th>Palabra Español</th>
+                            <th>Palabra Tenek</th>
+                            <th>Descripcion</th>
+                        </thead>
+                        <tbody>
+                            {{#each words}}
+                                <tr>
+                                    <td><strong>{{pal_esp}}</strong></td>
+                                    <td><strong>{{pal_tenek}}</strong></td>
+                                    <td><p>{{significado}}</p></td>
+                                </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
